--- a/_posts/2019-12-10-sixth-post.html
+++ b/_posts/2019-12-10-sixth-post.html
@@ -1461,7 +1461,7 @@ categories: Datavisualization
         var options = {
           icons: {
             default: {
-              normal: "\_posts\red.png"}},
+              normal: "red.png"}},
          mapType: 'styledMap',
          zoomLevel: 8,
          showTooltip: true,
