--- a/_posts/2019-12-10-nineth-post.html
+++ b/_posts/2019-12-10-nineth-post.html
@@ -1,5 +1,5 @@
 ---
-title: "요일별 주간 야강 교통사고 횟수와 사상자수"
+title: "요일별 주간 야간 교통사고 횟수와 사상자수"
 date: 2019-12-11 18:29:30 -0400
 categories: Datavisualization
 ---
