--- a/_posts/2019-12-10-nineth-post.html
+++ b/_posts/2019-12-10-nineth-post.html
@@ -5,6 +5,7 @@ categories: Datavisualization
 ---
 <html>
   <head>
+    <title>요일별 주간 야간 교통사고 횟수와 사상자수</title>
     </head>
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <script type="text/javascript">
