--- a/_posts/2019-12-10-tenth-post.html
+++ b/_posts/2019-12-10-tenth-post.html
@@ -1,6 +1,6 @@
 ---
-title: "요일별 주간 야간 교통사고 횟수와 사상자수의 반응형 시각화"
-date: 2019-12-11 19:42:30 -0400
+title: "인구대비 사고 발생 횟수 반응형 시각화"
+date: 2019-12-11 22:03:30 -0400
 categories: Datavisualization
 ---
 <html>
