--- a/_posts/2019-12-10-nineth-post.html
+++ b/_posts/2019-12-10-nineth-post.html
@@ -45,6 +45,8 @@ categories: Datavisualization
       hAxis: {title: "Day of the week"},
       seriesType: "bars",
       series: {2: {type: "line"}},
+      height : 720,
+      width : 1000,
       animation:{
         duration: 1000,
         easing: 'out'
